The reason for dropped java 8 was ical, which was dropped. So restored java 8 compability, I seems to make cheerjp happier.